<resources>
    <string name="app_name">WakeApp</string>
    <string name="BOTTOM_NAV_TITLE_MAIN_PAGE">主页</string>
    <string name="BOTTOM_NAV_TITLE_COURSE">课程表</string>
    <string name="BOTTOM_NAV_TITLE_FOCUS">专注模式</string>
    <string name="BOTTOM_NAV_TITLE_SETTING">设置</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="eventDetail_titleText">修改事件</string>
    <string name="addCourseDetail_titleText">新建课程信息</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="eventDetail_hint_addReminder">Add reminder</string>
    <string name="eventDetail_remindTitleText">提醒我…</string>
    <string name="DeleteCourse">删除课程</string>
    <string name="LittleCatSays">小猫咪说你的课程时间的设置错了，检查一下噢</string>
    <string name="pick_topic">选一下想应用到哪儿啦</string>
    <string name="pick_topic2">小猫咪检测到导入课程表中有课程与第%1$d周，%2$s，第%3$d大节,%4$s等课程冲突了噢</string>
    <string name="courseDetailChange">课程修改</string>
    <string name="courseDetailAdd">课程新增</string>
    <string name="eventDetail_addDetail">Add detail</string>
    <string name="eventDetail_detailTitleText">备注信息</string>
    <string name="scheduleDetail_noStartTimeHint">点击修改开始时间</string>
    <string name="courseDetail_timeAddHint">点击修改所在节数</string>
    <string name="courseDetail_timeAddWeekHint">点击修改所在周次</string>
    <string name="eventDetail_noStopTimeHint">点击修改结束时间</string>
    <string name="eventDetail_eventTitleInputField">事件标题</string>
    <string name="courseDetail_courseNameInputField">课程名称</string>
    <string name="eventDetail_timeTitleText">时间信息</string>
    <string name="courseDetail_AddressTitleText">地点信息</string>
    <string name="scheduleDetail_mute">Mute</string>
    <string name="scheduleDetail_focus">Focus</string>
    <string name="eventDetail_alarm">Alarm</string>
    <string name="mainPage_speedDialNewAffairTitle">新建事务</string>
    <string name="mainPage_speedDialNewScheduleTitle">新建日程</string>
    <string name="scheduleFragment_speedDialNewExcelTitle">导入课程表</string>
    <string name="scheduleFragment_speedDialNewCourseAddedTitle">新建课程</string>
    <string name="default_event_title">默认事件标题</string>
    <string name="eventDetail_deleteDetail">Delete Detail</string>
    <string name="eventDetail_detailList_content">备注内容</string>
    <string name="eventDetail_detailList_title">备注标题</string>
    <string name="eventDetail_reminderListItem_time">时间</string>
    <string name="eventDetail_reminderListItem_timeContent">任务前%d天%d小时%d分钟</string>
    <string name="eventDetail_reminderListItem_detail">备注</string>
    <string name="eventDetail_detailListItem_detailContentHint">点击修改提醒备注</string>
    <string name="courseDetail_detailListItem_detailContentHint">点击修改课程地点</string>
    <string name="eventDetail_detailListItem_ringBtn_hint">toggle ring</string>
    <string name="eventDetail_detailListItem_vibrateBtn_hint">toggle vibration</string>
    <string name="eventDetail_detailListItem_notificationBtn_hint">toggle notification</string>
    <string name="eventList_toggleAlarm">Toggle alarm</string>
    <string name="eventList_toggleFocus">Toggle focus</string>
    <string name="eventList_toggleMute">Toggle Mute</string>
    <string name="eventList_startTimeTVContent">开始于%02d月%02d日 %02d:%02d</string>
    <string name="eventList_stopTimeTVContent">结束于%02d月%02d日 %02d:%02d</string>
    <string name="courseDetail_timeContent">%1$s，第%2$d大节</string>
    <string name="repeatCourseDetail_forDialog">第%1$d周，%2$s，第%3$d大节,%4$s</string>
    <string name="courseDetail_timeContentWeek">第%d周至第%d周</string>
    <string name="节次">节次</string>
    <string name="第一大节">第一大节</string>
    <string name="第二大节">第二大节</string>
    <string name="第三大节">第三大节</string>
    <string name="第四大节">第四大节</string>
    <string name="第五大节">第五大节</string>
    <string name="第六大节">第六大节</string>
    <string name="Monday">星期一</string>
    <string name="星期二">星期二</string>
    <string name="星期三">星期三</string>
    <string name="星期四">星期四</string>
    <string name="星期五">星期五</string>
    <string name="星期六">星期六</string>
    <string name="星期日">星期日</string>
    <string name="dialog_ok">选好啦</string>
    <string name="dialog_cancel">不要了</string>
    <string name="WeekChoose">星期/节数</string>
    <string name="WeekChoose2">周次</string>
    <string name="Xing">星</string>
    <string name="Qi">期</string>
    <string name="Di">第</string>
    <string name="zhou">周</string>
    <string name="jie">节</string>
    <string name="Zhi">至</string>
    <string name="week_time_pick">星期/周次选择</string>

    <string name="title_activity_add_course_detail">AddCourseDetailActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="textview">TextView</string>
    <string name="switch_white_list">switch_white_list</string>
    <string name="todo">TODO</string>
    <string name="app">正在加载设备app列表，请稍后...</string>
    <string name="sure_white_list">确认</string>
    <string name="cancel_white_list">取消</string>
    <string name="set_white_list">设置白名单</string>
    <string name="select_theme">选择主题</string>
    <string name="set_schedule_time">设置当前学期起止日期</string>
    <string name="RepeatTypeDialogTitle">选择重复类型</string>
    <string name="eventDetail_repeatTitleText">重复方式</string>
    <string name="eventDetail_repeatTextNoRepeat">不重复</string>
    <string name="add_course_time">新增课程时间</string>
    <string name="add_thing_detail">新增事件备注</string>
    <string name="add_thing_reminder">添加事件提醒</string>
    <string name="set_thing_repeat">设置事件重复方式</string>
    <string name="import_schedule">新建课程或导入课程表</string>
    <string name="add_new_thing">新建事务或日程</string>
    <string name="add_thing_title">设置事件标题</string>
    <string name="set_alarm">是否开启闹铃提醒</string>
    <string name="add_course_loc">添加课程地点</string>
    <string name="set_course_name">设置课程名称</string>
    <string name="choose_delete">下拉点击删除按钮可删除课程喔</string>
    <string name="set_open_focuse">是否开启专注</string>
    <string name="scroll_set_time">滑动选择计时时长</string>
    <string name="set_course_time">设置课程时间</string>
    <string name="set_thing_end_time">设置事件结束时间</string>
    <string name="click_start_focus">点击此处开始一次计时</string>
    <string name="set_thing_start_time">设置事件开始时间</string>
    <string name="add_custom_whitelist">设置该日程专注时自定义白名单</string>
    <string name="reminder_picker_dialog_title">选择提醒时间</string>
    <string name="two_zero">00</string>
    <string name="tosee_stastic">页面上滑可查看统计信息</string>
    <string name="mainPageFragment_title">待办事项</string>
    <string name="unknown_temp">--°C</string>
    <string name="unknown_weather">未知天气</string>
</resources>