<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventDetail_reminderListItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal"
    app:cardCornerRadius="5dp"
    app:contentPadding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/eventDetail_reminderListItem_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventDetail_reminderListItem_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/eventDetail_reminderListItem_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/eventDetail_reminderListItem_timeContent"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventDetail_reminderListItem_title" />

        <TextView
            android:id="@+id/eventDetail_reminderListItem_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/eventDetail_reminderListItem_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eventDetail_reminderListItem_content" />

        <EditText
            android:id="@+id/eventDetail_reminderListItem_detailContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/eventDetail_detailListItem_detailContentHint"
            android:hint="@string/eventDetail_detailListItem_detailContentHint"
            android:inputType="text"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventDetail_reminderListItem_detail" />

        <ImageButton
            android:id="@+id/eventDetail_reminderListItem_ringBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/eventDetail_detailListItem_ringBtn_hint"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ring_on_24" />

        <ImageButton
            android:id="@+id/eventDetail_reminderListItem_vibrateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/eventDetail_detailListItem_vibrateBtn_hint"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventDetail_reminderListItem_ringBtn"
            app:srcCompat="@drawable/vibration_on_24" />

        <ImageButton
            android:id="@+id/eventDetail_reminderListItem_notificationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/eventDetail_detailListItem_notificationBtn_hint"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventDetail_reminderListItem_vibrateBtn"
            app:srcCompat="@drawable/notification_on_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>