<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainPageList_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="horizontal"
    app:cardCornerRadius="10dp"
    app:contentPadding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/eventList_eventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_event_title"
            android:maxWidth="200dp"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/eventList_noticeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/eventList_toggleAlarm"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/alarm_on_24" />

        <ImageButton
            android:id="@+id/eventList_focusBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/eventList_toggleFocus"
            android:padding="12dp"
            app:layout_constraintEnd_toStartOf="@+id/eventList_noticeBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/focus_on_24" />

        <ImageButton
            android:id="@+id/eventList_muteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/eventList_toggleMute"
            android:padding="12dp"
            app:layout_constraintEnd_toStartOf="@+id/eventList_focusBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mute_on_24" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/eventList_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="eventList_eventTitle, eventList_muteBtn"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="43dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eventList_barrier" />

        <TextView
            android:id="@+id/eventDetail_startTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/eventList_startTimeTVContent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider" />

        <TextView
            android:id="@+id/eventDetail_stopTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/eventList_stopTimeTVContent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventDetail_startTimeTV" />

        <LinearLayout
            android:id="@+id/mainPageList_cardDetailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eventDetail_stopTimeTV" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>