<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".eventDetail.ScheduleDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/scheduleDetail_mainContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scheduleDetail_actionBar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/scheduleDetail_eventTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/eventDetail_eventTitleInputField"
                android:autofillHints="事件标题" />

            <ImageButton
                android:id="@+id/scheduleDetail_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/eventDetail_alarm"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/alarm_on_24" />

            <ImageButton
                android:id="@+id/scheduleDetail_focus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="12dp"
                app:layout_constraintEnd_toStartOf="@+id/scheduleDetail_alarm"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/focus_on_24"
                android:contentDescription="@string/scheduleDetail_focus" />

            <ImageButton
                android:id="@+id/scheduleDetail_mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="12dp"
                app:layout_constraintEnd_toStartOf="@+id/scheduleDetail_focus"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/mute_on_24"
                android:contentDescription="@string/scheduleDetail_mute" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/scheduleDetail_eventTitle" />

            <TextView
                android:id="@+id/scheduleDetail_timeTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/eventDetail_timeTitleText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <androidx.cardview.widget.CardView
                android:id="@+id/scheduleDetail_startTimeCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="5dp"
                app:contentPadding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scheduleDetail_timeTitleText">

                <TextView
                    android:id="@+id/scheduleDetail_startTimeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scheduleDetail_noStartTimeHint" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/scheduleDetail_stopTimeCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="5dp"
                app:contentPadding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scheduleDetail_startTimeCard">

                <TextView
                    android:id="@+id/scheduleDetail_stopTimeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eventDetail_noStopTimeHint" />
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scheduleDetail_stopTimeCard" />

            <TextView
                android:id="@+id/scheduleDetail_detailTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/eventDetail_detailTitleText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/scheduleDetail_detailListFragment"
                android:name="indi.hitszse2020g6.wakeapp.eventDetail.EventDetailDescriptionFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scheduleDetail_detailTitleText" />

            <ImageButton
                android:id="@+id/scheduleDetail_addDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="12dp"
                android:layout_marginVertical="16dp"
                android:src="@drawable/add_circle_outline_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scheduleDetail_detailListFragment"
                android:contentDescription="@string/eventDetail_addDetail" />


            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scheduleDetail_addDetail"  />

            <TextView
                android:id="@+id/scheduleDetail_reminderTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventDetail_remindTitleText"
                android:layout_marginVertical="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider4" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/scheduleDetail_reminderListFragment"
                android:name="indi.hitszse2020g6.wakeapp.eventDetail.EventDetailReminderFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scheduleDetail_reminderTitleText" />

            <ImageButton
                android:id="@+id/scheduleDetail_addReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="12dp"
                android:layout_marginVertical="16dp"
                android:src="@drawable/add_circle_outline_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scheduleDetail_reminderListFragment"
                android:contentDescription="@string/eventDetail_hint_addReminder" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/scheduleDetail_actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/scheduleDetail_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/check_24"
                android:contentDescription="@string/confirm" />

            <ImageButton
                android:id="@+id/scheduleDetail_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/close_24"
                android:contentDescription="@string/cancel" />

            <TextView
                android:id="@+id/scheduleDetail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventDetail_titleText"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/scheduleDetail_confirm"
                app:layout_constraintStart_toEndOf="@+id/scheduleDetail_cancel"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>